--- a/preprocess_data.ipynb
+++ b/preprocess_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {
     "code_folding": [
      0
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,14 +334,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# of Incidents: 239677\n"
+      "# of Incidents: 239677\n",
+      "Columns: ['incident_id' 'date' 'state' 'city_or_county' 'address' 'n_killed'\n",
+      " 'n_injured' 'congressional_district' 'gun_stolen' 'gun_type'\n",
+      " 'incident_characteristics' 'latitude' 'longitude' 'n_guns_involved'\n",
+      " 'participant_age' 'participant_gender' 'participant_name'\n",
+      " 'participant_relationship' 'participant_status' 'participant_type'\n",
+      " 'state_house_district' 'state_senate_district']\n"
      ]
     },
     {
@@ -588,7 +594,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,12 +606,23 @@
     "            'state_house_district', 'state_senate_district']]\n",
     "\n",
     "print('# of Incidents: ' + str(len(data)))\n",
+    "print('Columns: ' + str(data.columns.values))\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleanPath = os.path.join(directory, 'data', 'gun-violence-data-cleaned.csv')\n",
+    "data.to_csv(cleanPath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -709,56 +726,47 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>51</td>\n",
+       "      <td>20</td>\n",
        "      <td>Male</td>\n",
-       "      <td>Greg Griego</td>\n",
+       "      <td>Julian Sims</td>\n",
        "      <td></td>\n",
-       "      <td>Killed</td>\n",
+       "      <td>Arrested</td>\n",
        "      <td>Victim</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>40</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Sara Griego</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Male</td>\n",
        "      <td></td>\n",
-       "      <td>Killed</td>\n",
+       "      <td></td>\n",
+       "      <td>Injured</td>\n",
        "      <td>Victim</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>9</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Zephania Griego</td>\n",
+       "      <td>NaN</td>\n",
        "      <td></td>\n",
-       "      <td>Killed</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>Injured</td>\n",
        "      <td>Victim</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Jael Griego</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Male</td>\n",
        "      <td></td>\n",
-       "      <td>Killed</td>\n",
+       "      <td></td>\n",
+       "      <td>Injured</td>\n",
        "      <td>Victim</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Female</td>\n",
-       "      <td>Angelina Griego</td>\n",
        "      <td></td>\n",
-       "      <td>Killed</td>\n",
-       "      <td>Victim</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>15</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Nehemiah Griego</td>\n",
-       "      <td>Family</td>\n",
-       "      <td>Unharmed</td>\n",
+       "      <td></td>\n",
+       "      <td>Injured</td>\n",
        "      <td>Subject</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -766,23 +774,23 @@
        "</div>"
       ],
       "text/plain": [
-       "  age  gender             name relationship    status     type\n",
-       "0  51    Male      Greg Griego                 Killed   Victim\n",
-       "1  40  Female      Sara Griego                 Killed   Victim\n",
-       "2   9    Male  Zephania Griego                 Killed   Victim\n",
-       "3   5  Female      Jael Griego                 Killed   Victim\n",
-       "4   2  Female  Angelina Griego                 Killed   Victim\n",
-       "5  15    Male  Nehemiah Griego       Family  Unharmed  Subject"
+       "   age  gender         name relationship    status     type\n",
+       "0   20    Male  Julian Sims               Arrested   Victim\n",
+       "1  NaN    Male                             Injured   Victim\n",
+       "2  NaN                                     Injured   Victim\n",
+       "3  NaN    Male                             Injured   Victim\n",
+       "4  NaN  Female                             Injured  Subject"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Get the people involved for a given incident; in this case, the one in the 0th index\n",
-    "people = get_people(data.iloc[6])\n",
+    "# Get the people involved for a given incident; in this case, the one in the 4th index\n",
+    "# Note: not all events have data for every person. That is, some values will be NaN or an empty string\n",
+    "people = get_people(data.iloc[4])\n",
     "people"
    ]
   },
