split date column in cleaned dataset

--- a/Gun Violence Visualization.ipynb
+++ b/Gun Violence Visualization.ipynb
@@ -20,35 +20,265 @@
     "# Import necessary packages\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "File b'data\\\\gun-violence-data_01-2013_03-2018.csv' does not exist",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-b7ec82ed9656>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgunViolence\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'data\\gun-violence-data_01-2013_03-2018.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mgunViolence\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Miniconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36mparser_f\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, escapechar, comment, encoding, dialect, tupleize_cols, error_bad_lines, warn_bad_lines, skipfooter, doublequote, delim_whitespace, low_memory, memory_map, float_precision)\u001b[0m\n\u001b[0;32m    676\u001b[0m                     skip_blank_lines=skip_blank_lines)\n\u001b[0;32m    677\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 678\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    679\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    680\u001b[0m     \u001b[0mparser_f\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Miniconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    438\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    439\u001b[0m     \u001b[1;31m# Create the parser.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 440\u001b[1;33m     \u001b[0mparser\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    441\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    442\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Miniconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[0;32m    785\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'has_index_names'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mkwds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'has_index_names'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    786\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 787\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    788\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    789\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Miniconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m_make_engine\u001b[1;34m(self, engine)\u001b[0m\n\u001b[0;32m   1012\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_make_engine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'c'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1013\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'c'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1014\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCParserWrapper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1015\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1016\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'python'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Miniconda3\\lib\\site-packages\\pandas\\io\\parsers.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, src, **kwds)\u001b[0m\n\u001b[0;32m   1706\u001b[0m         \u001b[0mkwds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'usecols'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0musecols\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1707\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1708\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reader\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparsers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTextReader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1709\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1710\u001b[0m         \u001b[0mpassed_names\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnames\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader.__cinit__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mpandas\\_libs\\parsers.pyx\u001b[0m in \u001b[0;36mpandas._libs.parsers.TextReader._setup_parser_source\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: File b'data\\\\gun-violence-data_01-2013_03-2018.csv' does not exist"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>incident_id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>state</th>\n",
+       "      <th>city_or_county</th>\n",
+       "      <th>address</th>\n",
+       "      <th>n_killed</th>\n",
+       "      <th>n_injured</th>\n",
+       "      <th>congressional_district</th>\n",
+       "      <th>gun_stolen</th>\n",
+       "      <th>...</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>n_guns_involved</th>\n",
+       "      <th>participant_age</th>\n",
+       "      <th>participant_gender</th>\n",
+       "      <th>participant_name</th>\n",
+       "      <th>participant_relationship</th>\n",
+       "      <th>participant_status</th>\n",
+       "      <th>participant_type</th>\n",
+       "      <th>state_house_district</th>\n",
+       "      <th>state_senate_district</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>461105</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Mckeesport</td>\n",
+       "      <td>1506 Versailles Avenue and Coursin Street</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-79.8559</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0::20</td>\n",
+       "      <td>0::Male||1::Male||3::Male||4::Female</td>\n",
+       "      <td>0::Julian Sims</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0::Arrested||1::Injured||2::Injured||3::Injure...</td>\n",
+       "      <td>0::Victim||1::Victim||2::Victim||3::Victim||4:...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>460726</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Hawthorne</td>\n",
+       "      <td>13500 block of Cerise Avenue</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-118.3330</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0::20</td>\n",
+       "      <td>0::Male</td>\n",
+       "      <td>0::Bernard Gillis</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0::Killed||1::Injured||2::Injured||3::Injured</td>\n",
+       "      <td>0::Victim||1::Victim||2::Victim||3::Victim||4:...</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>35.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>478855</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>Lorain</td>\n",
+       "      <td>1776 East 28th Street</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0::Unknown||1::Unknown</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-82.1377</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0::25||1::31||2::33||3::34||4::33</td>\n",
+       "      <td>0::Male||1::Male||2::Male||3::Male||4::Male</td>\n",
+       "      <td>0::Damien Bell||1::Desmen Noble||2::Herman Sea...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0::Injured, Unharmed, Arrested||1::Unharmed, A...</td>\n",
+       "      <td>0::Subject-Suspect||1::Subject-Suspect||2::Vic...</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>478925</td>\n",
+       "      <td>2013-01-05</td>\n",
+       "      <td>Colorado</td>\n",
+       "      <td>Aurora</td>\n",
+       "      <td>16000 block of East Ithaca Place</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-104.8020</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0::29||1::33||2::56||3::33</td>\n",
+       "      <td>0::Female||1::Male||2::Male||3::Male</td>\n",
+       "      <td>0::Stacie Philbrook||1::Christopher Ratliffe||...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0::Killed||1::Killed||2::Killed||3::Killed</td>\n",
+       "      <td>0::Victim||1::Victim||2::Victim||3::Subject-Su...</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>478959</td>\n",
+       "      <td>2013-01-07</td>\n",
+       "      <td>North Carolina</td>\n",
+       "      <td>Greensboro</td>\n",
+       "      <td>307 Mourning Dove Terrace</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0::Unknown||1::Unknown</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-79.9569</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0::18||1::46||2::14||3::47</td>\n",
+       "      <td>0::Female||1::Male||2::Male||3::Female</td>\n",
+       "      <td>0::Danielle Imani Jameison||1::Maurice Eugene ...</td>\n",
+       "      <td>3::Family</td>\n",
+       "      <td>0::Injured||1::Injured||2::Killed||3::Killed</td>\n",
+       "      <td>0::Victim||1::Victim||2::Victim||3::Subject-Su...</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>27.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  incident_id        date           state city_or_county  \\\n",
+       "0           0       461105  2013-01-01    Pennsylvania     Mckeesport   \n",
+       "1           1       460726  2013-01-01      California      Hawthorne   \n",
+       "2           2       478855  2013-01-01            Ohio         Lorain   \n",
+       "3           3       478925  2013-01-05        Colorado         Aurora   \n",
+       "4           4       478959  2013-01-07  North Carolina     Greensboro   \n",
+       "\n",
+       "                                     address  n_killed  n_injured  \\\n",
+       "0  1506 Versailles Avenue and Coursin Street         0          4   \n",
+       "1               13500 block of Cerise Avenue         1          3   \n",
+       "2                      1776 East 28th Street         1          3   \n",
+       "3           16000 block of East Ithaca Place         4          0   \n",
+       "4                  307 Mourning Dove Terrace         2          2   \n",
+       "\n",
+       "   congressional_district              gun_stolen  ... longitude  \\\n",
+       "0                    14.0                     NaN  ...  -79.8559   \n",
+       "1                    43.0                     NaN  ... -118.3330   \n",
+       "2                     9.0  0::Unknown||1::Unknown  ...  -82.1377   \n",
+       "3                     6.0                     NaN  ... -104.8020   \n",
+       "4                     6.0  0::Unknown||1::Unknown  ...  -79.9569   \n",
+       "\n",
+       "  n_guns_involved                    participant_age  \\\n",
+       "0             NaN                              0::20   \n",
+       "1             NaN                              0::20   \n",
+       "2             2.0  0::25||1::31||2::33||3::34||4::33   \n",
+       "3             NaN         0::29||1::33||2::56||3::33   \n",
+       "4             2.0         0::18||1::46||2::14||3::47   \n",
+       "\n",
+       "                            participant_gender  \\\n",
+       "0         0::Male||1::Male||3::Male||4::Female   \n",
+       "1                                      0::Male   \n",
+       "2  0::Male||1::Male||2::Male||3::Male||4::Male   \n",
+       "3         0::Female||1::Male||2::Male||3::Male   \n",
+       "4       0::Female||1::Male||2::Male||3::Female   \n",
+       "\n",
+       "                                    participant_name participant_relationship  \\\n",
+       "0                                     0::Julian Sims                      NaN   \n",
+       "1                                  0::Bernard Gillis                      NaN   \n",
+       "2  0::Damien Bell||1::Desmen Noble||2::Herman Sea...                      NaN   \n",
+       "3  0::Stacie Philbrook||1::Christopher Ratliffe||...                      NaN   \n",
+       "4  0::Danielle Imani Jameison||1::Maurice Eugene ...                3::Family   \n",
+       "\n",
+       "                                  participant_status  \\\n",
+       "0  0::Arrested||1::Injured||2::Injured||3::Injure...   \n",
+       "1      0::Killed||1::Injured||2::Injured||3::Injured   \n",
+       "2  0::Injured, Unharmed, Arrested||1::Unharmed, A...   \n",
+       "3         0::Killed||1::Killed||2::Killed||3::Killed   \n",
+       "4       0::Injured||1::Injured||2::Killed||3::Killed   \n",
+       "\n",
+       "                                    participant_type state_house_district  \\\n",
+       "0  0::Victim||1::Victim||2::Victim||3::Victim||4:...                  NaN   \n",
+       "1  0::Victim||1::Victim||2::Victim||3::Victim||4:...                 62.0   \n",
+       "2  0::Subject-Suspect||1::Subject-Suspect||2::Vic...                 56.0   \n",
+       "3  0::Victim||1::Victim||2::Victim||3::Subject-Su...                 40.0   \n",
+       "4  0::Victim||1::Victim||2::Victim||3::Subject-Su...                 62.0   \n",
+       "\n",
+       "  state_senate_district  \n",
+       "0                   NaN  \n",
+       "1                  35.0  \n",
+       "2                  13.0  \n",
+       "3                  28.0  \n",
+       "4                  27.0  \n",
+       "\n",
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "gunViolence = pd.read_csv('gun-violence-data_01-2013_03-2018.csv')\n",
+    "# Get cleaned gun violence master dataset \n",
+    "directory = os.path.dirname(str(Path().resolve()) + '\\\\')\n",
+    "path = os.path.join(directory, 'data', 'gun-violence-data-cleaned.csv')\n",
+    "gunViolence = pd.read_csv(path)\n",
     "gunViolence.head()"
    ]
   },
@@ -76,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
