--- a/preprocess_data.ipynb
+++ b/preprocess_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "code_folding": [
      0
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -244,19 +244,12 @@
        "3  http://www.dailydemocrat.com/20130106/aurora-s...   \n",
        "4  http://www.journalnow.com/news/local/article_d...   \n",
        "\n",
-       "   incident_url_fields_missing          ...           \\\n",
-       "0                        False          ...            \n",
-       "1                        False          ...            \n",
-       "2                        False          ...            \n",
-       "3                        False          ...            \n",
-       "4                        False          ...            \n",
-       "\n",
-       "                     participant_age  \\\n",
-       "0                              0::20   \n",
-       "1                              0::20   \n",
-       "2  0::25||1::31||2::33||3::34||4::33   \n",
-       "3         0::29||1::33||2::56||3::33   \n",
-       "4         0::18||1::46||2::14||3::47   \n",
+       "   incident_url_fields_missing  ...                    participant_age  \\\n",
+       "0                        False  ...                              0::20   \n",
+       "1                        False  ...                              0::20   \n",
+       "2                        False  ...  0::25||1::31||2::33||3::34||4::33   \n",
+       "3                        False  ...         0::29||1::33||2::56||3::33   \n",
+       "4                        False  ...         0::18||1::46||2::14||3::47   \n",
        "\n",
        "                               participant_age_group  \\\n",
        "0  0::Adult 18+||1::Adult 18+||2::Adult 18+||3::A...   \n",
@@ -317,7 +310,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -542,19 +535,12 @@
        "3                     6.0                     NaN                     NaN   \n",
        "4                     6.0  0::Unknown||1::Unknown  0::Handgun||1::Handgun   \n",
        "\n",
-       "           ...          longitude  n_guns_involved  \\\n",
-       "0          ...           -79.8559              NaN   \n",
-       "1          ...          -118.3330              NaN   \n",
-       "2          ...           -82.1377              2.0   \n",
-       "3          ...          -104.8020              NaN   \n",
-       "4          ...           -79.9569              2.0   \n",
-       "\n",
-       "                     participant_age  \\\n",
-       "0                              0::20   \n",
-       "1                              0::20   \n",
-       "2  0::25||1::31||2::33||3::34||4::33   \n",
-       "3         0::29||1::33||2::56||3::33   \n",
-       "4         0::18||1::46||2::14||3::47   \n",
+       "   ... longitude  n_guns_involved                    participant_age  \\\n",
+       "0  ...  -79.8559              NaN                              0::20   \n",
+       "1  ... -118.3330              NaN                              0::20   \n",
+       "2  ...  -82.1377              2.0  0::25||1::31||2::33||3::34||4::33   \n",
+       "3  ... -104.8020              NaN         0::29||1::33||2::56||3::33   \n",
+       "4  ...  -79.9569              2.0         0::18||1::46||2::14||3::47   \n",
        "\n",
        "                            participant_gender  \\\n",
        "0         0::Male||1::Male||3::Male||4::Female   \n",
@@ -594,7 +580,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +598,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>incident_id</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>state</th>\n",
+       "      <th>city_or_county</th>\n",
+       "      <th>address</th>\n",
+       "      <th>n_killed</th>\n",
+       "      <th>n_injured</th>\n",
+       "      <th>congressional_district</th>\n",
+       "      <th>...</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>n_guns_involved</th>\n",
+       "      <th>participant_age</th>\n",
+       "      <th>participant_gender</th>\n",
+       "      <th>participant_name</th>\n",
+       "      <th>participant_relationship</th>\n",
+       "      <th>participant_status</th>\n",
+       "      <th>participant_type</th>\n",
+       "      <th>state_house_district</th>\n",
+       "      <th>state_senate_district</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>461105</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Pennsylvania</td>\n",
+       "      <td>Mckeesport</td>\n",
+       "      <td>1506 Versailles Avenue and Coursin Street</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-79.8559</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0::20</td>\n",
+       "      <td>0::Male||1::Male||3::Male||4::Female</td>\n",
+       "      <td>0::Julian Sims</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0::Arrested||1::Injured||2::Injured||3::Injure...</td>\n",
+       "      <td>0::Victim||1::Victim||2::Victim||3::Victim||4:...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>460726</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>California</td>\n",
+       "      <td>Hawthorne</td>\n",
+       "      <td>13500 block of Cerise Avenue</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-118.3330</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0::20</td>\n",
+       "      <td>0::Male</td>\n",
+       "      <td>0::Bernard Gillis</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0::Killed||1::Injured||2::Injured||3::Injured</td>\n",
+       "      <td>0::Victim||1::Victim||2::Victim||3::Victim||4:...</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>35.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>478855</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>Lorain</td>\n",
+       "      <td>1776 East 28th Street</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-82.1377</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0::25||1::31||2::33||3::34||4::33</td>\n",
+       "      <td>0::Male||1::Male||2::Male||3::Male||4::Male</td>\n",
+       "      <td>0::Damien Bell||1::Desmen Noble||2::Herman Sea...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0::Injured, Unharmed, Arrested||1::Unharmed, A...</td>\n",
+       "      <td>0::Subject-Suspect||1::Subject-Suspect||2::Vic...</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>478925</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Colorado</td>\n",
+       "      <td>Aurora</td>\n",
+       "      <td>16000 block of East Ithaca Place</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-104.8020</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0::29||1::33||2::56||3::33</td>\n",
+       "      <td>0::Female||1::Male||2::Male||3::Male</td>\n",
+       "      <td>0::Stacie Philbrook||1::Christopher Ratliffe||...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0::Killed||1::Killed||2::Killed||3::Killed</td>\n",
+       "      <td>0::Victim||1::Victim||2::Victim||3::Subject-Su...</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>478959</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>North Carolina</td>\n",
+       "      <td>Greensboro</td>\n",
+       "      <td>307 Mourning Dove Terrace</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-79.9569</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0::18||1::46||2::14||3::47</td>\n",
+       "      <td>0::Female||1::Male||2::Male||3::Female</td>\n",
+       "      <td>0::Danielle Imani Jameison||1::Maurice Eugene ...</td>\n",
+       "      <td>3::Family</td>\n",
+       "      <td>0::Injured||1::Injured||2::Killed||3::Killed</td>\n",
+       "      <td>0::Victim||1::Victim||2::Victim||3::Subject-Su...</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>27.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   incident_id  year  month  day           state city_or_county  \\\n",
+       "0       461105  2013      1    1    Pennsylvania     Mckeesport   \n",
+       "1       460726  2013      1    1      California      Hawthorne   \n",
+       "2       478855  2013      1    1            Ohio         Lorain   \n",
+       "3       478925  2013      1    5        Colorado         Aurora   \n",
+       "4       478959  2013      1    7  North Carolina     Greensboro   \n",
+       "\n",
+       "                                     address  n_killed  n_injured  \\\n",
+       "0  1506 Versailles Avenue and Coursin Street         0          4   \n",
+       "1               13500 block of Cerise Avenue         1          3   \n",
+       "2                      1776 East 28th Street         1          3   \n",
+       "3           16000 block of East Ithaca Place         4          0   \n",
+       "4                  307 Mourning Dove Terrace         2          2   \n",
+       "\n",
+       "   congressional_district  ... longitude n_guns_involved  \\\n",
+       "0                    14.0  ...  -79.8559             NaN   \n",
+       "1                    43.0  ... -118.3330             NaN   \n",
+       "2                     9.0  ...  -82.1377             2.0   \n",
+       "3                     6.0  ... -104.8020             NaN   \n",
+       "4                     6.0  ...  -79.9569             2.0   \n",
+       "\n",
+       "                     participant_age  \\\n",
+       "0                              0::20   \n",
+       "1                              0::20   \n",
+       "2  0::25||1::31||2::33||3::34||4::33   \n",
+       "3         0::29||1::33||2::56||3::33   \n",
+       "4         0::18||1::46||2::14||3::47   \n",
+       "\n",
+       "                            participant_gender  \\\n",
+       "0         0::Male||1::Male||3::Male||4::Female   \n",
+       "1                                      0::Male   \n",
+       "2  0::Male||1::Male||2::Male||3::Male||4::Male   \n",
+       "3         0::Female||1::Male||2::Male||3::Male   \n",
+       "4       0::Female||1::Male||2::Male||3::Female   \n",
+       "\n",
+       "                                    participant_name  \\\n",
+       "0                                     0::Julian Sims   \n",
+       "1                                  0::Bernard Gillis   \n",
+       "2  0::Damien Bell||1::Desmen Noble||2::Herman Sea...   \n",
+       "3  0::Stacie Philbrook||1::Christopher Ratliffe||...   \n",
+       "4  0::Danielle Imani Jameison||1::Maurice Eugene ...   \n",
+       "\n",
+       "   participant_relationship  \\\n",
+       "0                       NaN   \n",
+       "1                       NaN   \n",
+       "2                       NaN   \n",
+       "3                       NaN   \n",
+       "4                 3::Family   \n",
+       "\n",
+       "                                  participant_status  \\\n",
+       "0  0::Arrested||1::Injured||2::Injured||3::Injure...   \n",
+       "1      0::Killed||1::Injured||2::Injured||3::Injured   \n",
+       "2  0::Injured, Unharmed, Arrested||1::Unharmed, A...   \n",
+       "3         0::Killed||1::Killed||2::Killed||3::Killed   \n",
+       "4       0::Injured||1::Injured||2::Killed||3::Killed   \n",
+       "\n",
+       "                                    participant_type state_house_district  \\\n",
+       "0  0::Victim||1::Victim||2::Victim||3::Victim||4:...                  NaN   \n",
+       "1  0::Victim||1::Victim||2::Victim||3::Victim||4:...                 62.0   \n",
+       "2  0::Subject-Suspect||1::Subject-Suspect||2::Vic...                 56.0   \n",
+       "3  0::Victim||1::Victim||2::Victim||3::Subject-Su...                 40.0   \n",
+       "4  0::Victim||1::Victim||2::Victim||3::Subject-Su...                 62.0   \n",
+       "\n",
+       "  state_senate_district  \n",
+       "0                   NaN  \n",
+       "1                  35.0  \n",
+       "2                  13.0  \n",
+       "3                  28.0  \n",
+       "4                  27.0  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Replace date column with year, month, and day\n",
+    "data.loc[:,'year'] = pd.DatetimeIndex(data.loc[:,'date']).year\n",
+    "data.loc[:,'month'] = pd.DatetimeIndex(data.loc[:,'date']).month\n",
+    "data.loc[:,'day'] = pd.DatetimeIndex(data.loc[:,'date']).day\n",
+    "cols = data.columns.tolist()\n",
+    "cols = cols[:1] + cols[-3:] + cols[2:-3]\n",
+    "data = data[cols]\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +1069,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
